--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,9 +19,14 @@ node {
         withSonarQubeEnv('sonarqube') {
             sh "${mvnHome}/bin/mvn sonar:sonar"
     }
+	stage("Quality Gate") {
+              timeout(time: 1, unit: 'HOURS') {
+                waitForQualityGate abortPipeline: true
+              }
 	stage('tomcat-deployment') { 
         sshagent(['ec2-user']) {
             sh "scp -o StrictHostKeyChecking=no /var/lib/jenkins/workspace/tomcat-deployment1/target/tomcat-demo.war ec2-user@44.201.187.56:/opt/tomcat/webapps"
            }
-    }
+       }
+   }
 }
